langtools/test/tools/javac/typeAnnotations/failures/common/typeArgs/DuplicateTypeAnnotation.out
DuplicateTypeAnnotation.java:10:24: compiler.err.duplicate.annotation
1 error
